# syncevolution

./: .gitignore  AUTOTOOLS-TODO  HACKING  Makefile.am  NEWS  README-DLT.rst  README.packagers  README.rst  autogen-maemo.sh  autogen.sh  builddeb  buildsrc  configure-post.in  configure-pre.in  configure.ac  gen-autotools.sh  setup-variables.am
.github/workflows/: main.yml
debian/: changelog  control  copyright  rules  syncevolution.aegis  syncevolution.install
m4-repo/: ax_boost_locale.m4  se_macros.m4
po/: Makevars  POTFILES.in  POTFILES.skip  ar.po  ast.po  ca.po  da.po  en_GB.po  gl.po  hu.po  id.po  ro.po  sk.po  sv.po  th.po  tr.po
src/: CmdlineSyncClient.cpp  CmdlineSyncClient.h  Makefile-gen.am  NotificationBackendMLite.cpp  client-test-app.cpp  client-test-buteo.cpp  client-test-buteo.h  shlibs.local  src.am  syncclient_sample_config.xml  syncevo-dbus-server.cpp  syncevolution.cpp  testcases.am
src/backends/activesync/: ActiveSyncCalendarSource.cpp  ActiveSyncCalendarSource.h  ActiveSyncSource.cpp  ActiveSyncSource.h  ActiveSyncSourceRegister.cpp  activesync.am  configure-sub.in
src/backends/addressbook/: AddressBookSource.cpp  addressbook.am
src/backends/akonadi/: AkonadiSyncSourceRegister.cpp  README  akonadi.am  akonadisyncsource.cpp  akonadisyncsource.h  configure-sub.in
src/backends/evolution/: EvolutionCalendarSource.cpp  EvolutionCalendarSource.h  EvolutionCalendarSourceRegister.cpp  EvolutionContactSource.cpp  EvolutionContactSource.h  EvolutionContactSourceRegister.cpp  EvolutionMemoSource.cpp  EvolutionMemoSource.h  EvolutionSyncSource.cpp  EvolutionSyncSource.h  configure-sub.in  e-cal-check-timezones.c  evolution.am
src/backends/file/: FileSyncSource.cpp  FileSyncSource.h  FileSyncSourceRegister.cpp  file.am
src/backends/gdata/: GDataSourceRegister.cpp  GDataSyncSource.cpp  GDataSyncSource.h  GoogleContact.cpp  GoogleContact.h  GoogleContactService.h  GoogleException.h  configure-sub.in  gdata.am
src/backends/gnome/: GNOMEPlatform.cpp  GNOMEPlatformRegister.cpp  configure-sub.in  gnome.am
src/backends/goa/: GOARegister.cpp  README  configure-sub.in  goa.am  goa.cpp  goa.h
src/backends/kcalextended/: KCalExtendedSource.cpp  KCalExtendedSource.h  KCalExtendedSourceRegister.cpp  kcalextended.am
src/backends/kde/: KDEPlatform.cpp  configure-sub.in  kde.am
src/backends/maemo/: MaemoCalendarSource.cpp  MaemoCalendarSource.h  MaemoCalendarSourceRegister.cpp  maemo.am
src/backends/oauth2/: README  configure-sub.in  oauth2.am  oauth2.cpp  oauth2.h  oauth2Register.cpp
src/backends/pbap/: PbapSyncSource.cpp  PbapSyncSource.cpp.rej  PbapSyncSource.h  PbapSyncSourceRegister.cpp  README  configure-sub.in  pbap.am
src/backends/qtcontacts/: QtContactsSource.cpp  QtContactsSourceRegister.cpp  qtcontacts.am
src/backends/signon/: README  configure-sub.in  signon-accounts.cpp  signon.am  signon.cpp  signon.h  (+1 more)
src/core/: SyncSource.cpp  SyncSource.h  TrackingSyncSource.cpp  TrackingSyncSource.h  eds_abi_wrapper.cpp  eds_abi_wrapper.h
src/dbus-qt/: Makefile.am  configure-sub.in
src/dbus-server/: auto-sync-manager.cpp  syncevo-dbus-server.cpp
src/gdbus/: gdbus-cxx-bridge.cpp  gdbus-cxx-bridge.h  gdbus-cxx.h  gdbus.am  object.c  watch.c
src/gdbusxx/: gdbus-cxx-bridge.cpp  gdbus-cxx-bridge.h  gdbus-cxx.h  gdbusxx.am
src/gnome-bluetooth/: gnome-bluetooth.am  syncevolution.c
src/gtk-ui/: Makefile.am  README  gtk-ui.am  sync-config-widget.c  sync-config-widget.h  sync-ui-config.c  sync-ui-config.h  sync-ui.c  ui.glade
src/gtk3-ui/: Makefile.am  gtk-ui.am  main.c  sync-config-widget.c  sync-ui.c
src/htmlui/: ui.html
src/http-server-ui/: Makefile.am  syncevo-http-trayicon.glade  syncevo-http-ui  syncevo-http-ui.desktop  syncevo_http_trayicon.py
src/syncevo/: BoostHelper.h  Cmdline.cpp  Cmdline.h  CmdlineSyncClient.cpp  CmdlineSyncClient.h  ConfigFilter.cpp  ConfigNode.cpp  ConfigNode.h  ConfigTree.h  CurlTransportAgent.cpp  CurlTransportAgent.h  DBusTraits.h  DataBlob.h  DevNullConfigNode.h  EDSClient.cpp  EDSClient.h  Exception.cpp  Exception.h  FileConfigNode.cpp  FileConfigTree.cpp  FileConfigTree.h  FileDataBlob.cpp  FileDataBlob.h  FilterConfigNode.cpp  FilterConfigNode.h  ForkExec.cpp  ForkExec.h  GLibSupport.cpp  GLibSupport.h  GValueSupport.h  GVariantSupport.cpp  GVariantSupport.h  GeeSupport.h  GuardFD.h  HashConfigNode.h  IdentityProvider.cpp  IdentityProvider.h  IniConfigNode.cpp  IniConfigNode.h  LocalTransportAgent.cpp  (+72 more)
test/: ClientTest.cpp  ClientTest.h  ClientTestAssert.h  IcalTest.cpp  Makefile  README.qtcontacts  abort-redirect.cpp  client-test-main.cpp  cppcheck-wrapper.sh  dbus-client-server.cpp  dbus-server-config.py  dbus-session.sh  evo.supp  gdb-dump-stack  generate-html.xsl  log2html.py  logger.py  resources.py  resultchecker.py  runtestdbus.py  runtests.py  synccompare.pl  syncevo-http-server.py  syncevo-phone-config.py  sys.supp  test-dbus-concurrency.txt  test-dbus.py  test.am  test.cpp  testdbus.py  valgrindcheck.sh  wrappercheck.sh
test/gdata/: GoogleAuthService.cpp  GoogleAuthService.h  GoogleContact.cpp  GoogleContact.h  GoogleContactService.cpp  GoogleVCard.cpp  GoogleVCard.h  README  test.cpp
test/testcases/: carddav.vcf  carddav.vcf.googlecontacts.tem.patch  eds_contact.vcf  eds_contact.vcf.Ovi.tem.patch  eds_contact.vcf.apple.tem.patch  eds_contact.vcf.exchange.tem.patch  eds_contact.vcf.filekde.tem.patch  eds_contact.vcf.google.tem.patch  eds_contact.vcf.googlecontacts.tem.patch  eds_contact.vcf.googleeas.tem.patch  eds_contact.vcf.memotoo.tem.patch  eds_contact.vcf.mobical.tem.patch  eds_contact.vcf.oracle.tem.patch  eds_contact.vcf.syncevolution.tem.patch  eds_contact.vcf.synthesis.tem.patch  eds_contact.vcf.yahoo.tem.patch  eds_contact.vcf.zyb.tem.patch  eds_event.ics  eds_event.ics.Ovi.tem.patch  eds_event.ics.apple.tem.patch  eds_event.ics.exchange.tem.patch  eds_event.ics.funambol.tem.patch  eds_event.ics.googlecalendar.tem.patch  eds_event.ics.nokia_7210c.tem.patch  eds_event.ics.radicale.tem.patch  eds_memo.ics.memotoo.tem.patch  eds_task.ics.funambol.tem.patch  google_event.ics
(+264 files in other folders)
